arreglado fallo carga de JS

--- a/templates/main.html
+++ b/templates/main.html
@@ -49,7 +49,7 @@
       }
     })(this);
   </script>
-  <script type="text/javascript" src"/static/js/captainup.js"></script>
+  <script type="text/javascript" src="/static/js/captainup.js"></script>
   <script type="text/javascript" src="/jsi18n/"></script>
 
   <link rel="icon" type="image/x-icon" href="${static.url(microsite.get_value('favicon_path', settings.FAVICON_PATH))}" />
